# serializer version: 1
# name: test_all_entities[binary_sensor.kiosker_a98be1ce_blackout-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kiosker_a98be1ce_blackout',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Blackout',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Blackout',
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blackout_state',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_blackoutState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.kiosker_a98be1ce_blackout-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE Blackout',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kiosker_a98be1ce_blackout',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.kiosker_a98be1ce_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kiosker_a98be1ce_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Charging',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.kiosker_a98be1ce_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'Kiosker A98BE1CE Charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kiosker_a98be1ce_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.kiosker_a98be1ce_screensaver-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kiosker_a98be1ce_screensaver',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Screensaver',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Screensaver',
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'screensaver_state',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_screensaverState',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.kiosker_a98be1ce_screensaver-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE Screensaver',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kiosker_a98be1ce_screensaver',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
